exports[`analysisAddForm should have working getBoolField method 1`] = `
Object {
  "defaultValue": false,
  "mapper": Object {
    "fromRaw": [Function fromRaw],
    "toRaw": [Function toRaw]
  },
  "name": "someBool",
  "validator": Object {}
}
`;

exports[`analysisAddForm should have working getStrField method 1`] = `
Object {
  "defaultValue": "",
  "mapper": Object {
    "fromRaw": [Function fromRaw],
    "toRaw": [Function toRaw]
  },
  "name": "someStr",
  "validator": Object {
    "rawValidator": [Function validator]
  }
}
`;
